--- a/archivist/src/main/resources/templates/analysts.html
+++ b/archivist/src/main/resources/templates/analysts.html
@@ -8,7 +8,7 @@
 <section layout:fragment="content">
     <div class="wrapper">
     <div th:include="fragments/analysts :: menu"/>
-    <table id="table" class="table table-striped table-condensed">
+    <table id="table" class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Url</th>
