--- a/archivist/src/main/resources/templates/folders.html
+++ b/archivist/src/main/resources/templates/folders.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div id="leftContent" class="col-md-12" style="padding:0px">
-                <table id="table" class="table table-striped table-hover">
+                <table id="table" class="table table-striped table-hover table-condensed">
                     <thead>
                     <tr>
                         <th></th>
