--- a/archivist/src/main/resources/templates/fragments/assets.html
+++ b/archivist/src/main/resources/templates/fragments/assets.html
@@ -25,7 +25,7 @@
 </div>
 
 <div th:fragment="table">
-    <table class="table table-striped table-hover table-condensed">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th></th>
