--- a/archivist/src/main/resources/templates/fragments/table.html
+++ b/archivist/src/main/resources/templates/fragments/table.html
@@ -15,6 +15,8 @@
 <script th:inline="javascript" type="text/javascript">
     $('#table').on('click', '.clickable-row', function(event) {
         $(this).addClass('success').siblings().removeClass('success');
+    }).on('mousedown', '.clickable-row', function(event) {
+        event.preventDefault();
     });
 
     $(".table-hover > tbody > tr").dblclick(function() {
@@ -27,6 +29,8 @@
     <script th:inline="javascript" type="text/javascript">
         $('#table').on('click', '.clickable-row', function(event) {
             $(this).addClass('success').siblings().removeClass('success');
+        }).on('mousedown', '.clickable-row', function(event) {
+            event.preventDefault();
         });
 </script>
 
