--- a/archivist/src/main/resources/templates/fragments/tasks.html
+++ b/archivist/src/main/resources/templates/fragments/tasks.html
@@ -51,7 +51,7 @@ $(function(){
 </div>
 
 <div th:fragment="task_table">
-    <table id="table" class="table table-striped table-hover table-condensed">
+    <table id="table" class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Id</th>
