--- a/archivist/src/main/resources/templates/fragments/users.html
+++ b/archivist/src/main/resources/templates/fragments/users.html
@@ -15,6 +15,9 @@
 
                 <div class="navbar-collapse collapse">
                     <div class="navbar navbar-right">
+                        <button onclick="$('#modalCreate').modal({'backdrop': 'static'});"
+                                type="button" class="btn btn-danger navbar-btn"><i class="fa fa-plus fa-lg fa-fw" aria-hidden="true"></i></button>
+
                         <button type="button" class="btn btn-default navbar-btn"><i class="fa fa-filter fa-lg fa-fw" aria-hidden="true"></i></button>
                         <button type="button" class="btn btn-default navbar-btn"><i class="fa fa-th fa-lg fa-fw" aria-hidden="true"></i></button>
                         <button type="button" class="btn btn-default navbar-btn"><i class="fa fa-sort fa-lg fa-fw" aria-hidden="true"></i></button>
@@ -25,8 +28,20 @@
     </nav>
 </div>
 
+<div th:fragment="side_menu">
+    <div class="navbar navbar-default navbar-fixed-left">
+        <nav class="nav-sidebar">
+            <div class="list-group">
+                <a th:href="${'/gui/users/' + user.id}" class="list-group-item">Profile</a>
+                <a th:href="${'/gui/users/' + user.id + '/account'}" class="list-group-item">Account</a>
+                <a th:href="${'/gui/users/' + user.id + '/permissions'}" class="list-group-item">Permissions</a>
+            </div>
+        </nav>
+    </div>
+</div>
+
 <div th:fragment="modal_create">
-<div class="modal fade" id="modalForm" role="dialog">
+<div class="modal fade" id="modalCreate" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
@@ -35,7 +50,7 @@
                 <h4 class="modal-title">Create User</h4>
             </div>
             <div class="modal-body">
-                <form id="createUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/users}" th:object="${userBuilder}" method="post">
+                <form id="newUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/users}" th:object="${newUserForm}" method="post">
                     <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" th:field="*{username}" class="form-control" id="username" required="true" describedby="username-success"/>
@@ -60,19 +75,18 @@
                         <label for="password-verify">Verify Password:</label>
                         <input type="password" class="form-control" id="password-verify" required="true"/>
                     </div>
-
                     <button type="submit" class="btn btn-default">Create</button>
-                </form>
+                    </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="reset" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
     <!-- If there are validation errros, show form again. -->
     <div th:if="${errors}">
         <script th:inline="javascript" type="text/javascript">
-            $('#modalForm').modal({'backdrop': 'static'});
+            $('#modalCreate').modal({'backdrop': 'static'});
         </script>
     </div>
     <script th:inline="javascript" type="text/javascript">
@@ -94,8 +108,8 @@
                 }
             });
 
-            $('#modalForm').on('hidden.bs.modal', function (e) {
-                $(this).find('form').trigger('reset');
+            $('#modalCreate').on('hidden.bs.modal', function (e) {
+                $(this).find('#newUserForm')[0].reset();
 
                 $('#username-valid').parent().attr("class", "form-group has-feedback");
                 $('#username-valid').attr("class", "form-control-feedback");
