--- a/archivist/src/main/resources/templates/overview.html
+++ b/archivist/src/main/resources/templates/overview.html
@@ -8,7 +8,7 @@
 <body>
 <section layout:fragment="content">
 
-<div class="full-wrapper">
+<div class="wrapper">
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-3 col-md-3">
