--- a/archivist/src/main/resources/templates/permissions.html
+++ b/archivist/src/main/resources/templates/permissions.html
@@ -9,7 +9,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/permissions :: menu"/>
     <div class="wrapper">
-    <table id="table" class="table table-striped table-condensed">
+    <table id="table" class="table table-striped">
         <thead>
         <tr>
             <th>Name</th>
