--- a/archivist/src/main/resources/templates/permissions.html
+++ b/archivist/src/main/resources/templates/permissions.html
@@ -15,16 +15,21 @@
             <th>ID</th>
             <th>Type</th>
             <th>Name</th>
+            <th>Description</th>
         </tr>
         </thead>
         <tbody>
-        <tr class="clickable-row" th:attr="data-href=${'/gui/permissions/' + perm.id}" th:each="perm: ${allPermissions}">
+        <tr class="clickable-row" th:attr="data-href=${'/gui/permissions/' + perm.id}" th:each="perm: ${perms}">
             <td th:text="${perm.fullName}"></td>
             <td th:text="${perm.type}"></td>
             <td th:text="${perm.name}"></td>
+            <td th:text="${perm.description}"></td>
         </tr>
         </tbody>
     </table>
+    <div class="container-fluid">
+        <div th:include="fragments/table :: pager"/>
+    </div>
     <div th:include="fragments/table :: clickable"/>
 </div>
 </section>
