--- a/archivist/src/main/resources/templates/permissions.html
+++ b/archivist/src/main/resources/templates/permissions.html
@@ -9,6 +9,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/permissions :: menu"/>
     <div class="wrapper">
+
     <table id="table" class="table table-striped table-hover">
         <thead>
         <tr>
@@ -27,10 +28,12 @@
         </tr>
         </tbody>
     </table>
+
     <div class="container-fluid">
         <div th:include="fragments/table :: pager"/>
     </div>
     <div th:include="fragments/table :: clickable"/>
+    <div th:include="fragments/permissions :: modal_create"/>
 </div>
 </section>
 
