--- a/archivist/src/main/resources/templates/folders.html
+++ b/archivist/src/main/resources/templates/folders.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div id="leftContent" class="col-md-12" style="padding:0px">
-                <table id="table" class="table table-striped table-hover table-condensed">
+                <table id="table" class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th></th>
@@ -44,7 +44,19 @@
         </div>
     </div>
     </div>
-    <div th:include="fragments/folders :: create_modal"/>
+    <div id="contextMenu" class="dropdown clearfix">
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display:block;position:static;margin-bottom:5px;">
+            <li><a tabindex="-1" href="#">Action</a></li>
+            <li><a tabindex="-1" href="#">Another action</a></li>
+            <li><a tabindex="-1" href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a tabindex="-1" href="#">Separated link</a></li>
+        </ul>
+    </div>
+
+    <div th:include="fragments/folders :: modal_create"/>
+    <div th:include="fragments/table :: clickable"/>
+    <div th:include="fragments/table :: context_menu"/>
     <script th:inline="javascript" type="text/javascript">
         $(document).ready(function(e) {
 
@@ -68,15 +80,6 @@
                     close();
                 }
                 return false;
-            });
-
-            $('#t').on('click', '.clickable-row', function(event) {
-                $(this).addClass('success').siblings().removeClass('success');
-            });
-
-            $(".table-hover > tbody > tr").dblclick(function() {
-                console.log($(this).data("href"));
-                window.document.location = $(this).data("href");
             });
         });
 
