--- a/archivist/src/main/resources/templates/fragments/users.html
+++ b/archivist/src/main/resources/templates/fragments/users.html
@@ -46,7 +46,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
                 <h4 class="modal-title">Create User</h4>
             </div>
             <div class="modal-body">
