--- a/archivist/src/main/resources/templates/fragments/folders.html
+++ b/archivist/src/main/resources/templates/fragments/folders.html
@@ -21,8 +21,13 @@
 
                 <div class="navbar-collapse collapse">
                     <div class="navbar navbar-right">
+
+                        <th:block th:if="${folder != null &amp;&amp; folder.id &gt; 0 &amp;&amp; folder.dyhiId == null}">
+                        <button onclick="$('#dyhiModalCreate').modal({'backdrop': 'static'});"
+                                type="button" class="btn btn-danger navbar-btn"><i class="fa fa-flash fa-fw fa-lg" aria-hidden="true"/></button>
+                        </th:block>
                         <button onclick="$('#modalCreate').modal({'backdrop': 'static'});"
-                                type="button" class="btn btn-danger navbar-btn"><i class="fa fa-plus fa-lg fa-fw" aria-hidden="true"></i></button>
+                                type="button" class="btn btn-danger navbar-btn"><i class="fa fa-plus fa-lg fa-fw" aria-hidden="true"/></button>
 
                         <button id="opener" type="button" class="btn btn-default navbar-btn"><i class="fa fa-info fa-lg fa-fw" aria-hidden="true"></i></button>
                         <button type="button" class="btn btn-default navbar-btn"><i class="fa fa-filter fa-lg fa-fw" aria-hidden="true"></i></button>
@@ -43,7 +48,7 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
                     <h4 class="modal-title">Create Folder</h4>
                 </div>
                 <div class="modal-body">
