archivist: web fixes.

--- a/archivist/src/main/resources/templates/fragments/plugins.html
+++ b/archivist/src/main/resources/templates/fragments/plugins.html
@@ -11,7 +11,7 @@
                 <a class="navbar-brand" href="/gui/plugins"><i class="fa fa-plug fa-fw fa-lg"/>Plugins</a>
                 <p class="navbar-section navbar-text">
                 <a th:href="${'/gui/plugins/' + plugin.name}" th:if="${plugin != null}" class="navbar-link" th:text="${plugin.name + ' v' + plugin.version}">...</a>
-                <a href="#" th:if="${module != null}" class="navbar-link" th:text="${' / ' + module.name}">...</a>
+                <a href="#" th:if="${processor != null}" class="navbar-link" th:text="${' / ' + processor.name}">...</a>
                 </p>
             </div>
 
