--- a/archivist/src/main/resources/templates/imports.html
+++ b/archivist/src/main/resources/templates/imports.html
@@ -10,7 +10,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/imports :: menu"/>
     <div class="wrapper">
-        <table id="table" class="table table-striped table-condensed table-hover">
+        <table id="table" class="table table-striped table-hover">
             <thead>
             <tr>
                 <th>Status</th>
