--- a/archivist/src/main/resources/templates/plugin.html
+++ b/archivist/src/main/resources/templates/plugin.html
@@ -9,7 +9,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/plugins :: menu"/>
     <div class="wrapper">
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Type</th>
@@ -19,15 +19,16 @@
         </tr>
         </thead>
         <tbody>
-            <tr th:each="module: ${modules}">
-                <td th:text="${module.type}"></td>
-                <td><a th:text="${module.name}" th:href="@{/gui/plugins/__${plugin.name}__/module/__${module.type + ':' + module.plugin +':'+ module.name}__}"></a></td>
-                <td th:text="${module.supportedExtensions}"></td>
-                <td th:text="${module.toolTip}"></td>
+            <tr class="clickable-row" th:attr="data-href=${'/gui/plugins/' + plugin.id + '/processors/' + processor.id}" th:each="processor: ${processors}">
+                <td th:text="${processor.type}"></td>
+                <td th:text="${processor.name}"></td>
+                <td th:text="${processor.supportedExtensions}"></td>
+                <td th:text="${processor.description}"></td>
             </tr>
         </tbody>
     </table>
     </div>
+    <div th:include="fragments/table :: clickable"/>
 </section>
 
 </body>
