--- a/archivist/src/main/resources/templates/plugins.html
+++ b/archivist/src/main/resources/templates/plugins.html
@@ -9,7 +9,7 @@
 <section layout:fragment="content">
     <div th:include="fragments/plugins :: menu"/>
     <div class="wrapper">
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Name</th>
@@ -20,8 +20,8 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="plugin: ${plugins.list}">
-            <td><a th:text="${plugin.name}" th:href="@{/gui/plugins/__${plugin.name}__}"></a></td>
+        <tr class="clickable-row" th:attr="data-href=${'/gui/plugins/' + plugin.id}"  th:each="plugin: ${plugins.list}">
+            <td th:text="${plugin.name}"></td>
             <td th:text="${plugin.version}"></td>
             <td th:text="${plugin.publisher}"></td>
             <td th:text="${plugin.description}"></td>
@@ -30,6 +30,7 @@
         </tbody>
     </table>
     </div>
+    <div th:include="fragments/table :: clickable"/>
 </section>
 
 </body>
