archivist: updates to web interface to show exports.

--- a/archivist/src/main/resources/templates/exports.html
+++ b/archivist/src/main/resources/templates/exports.html
@@ -8,7 +8,6 @@
 <body>
 
 <section layout:fragment="content">
-    <div th:include="fragments/imports :: menu"/>
     <div class="wrapper">
         <table id="table" class="table table-striped table-hover">
             <thead>
@@ -22,7 +21,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="job: ${imports}" th:attr="data-href=${'/gui/imports/' + job.id}">
+            <tr th:each="job: ${exports}" th:attr="data-href=${'/gui/exports/' + job.id}">
 
                 <td class="vert-align">
                     <div th:include="fragments/job :: state_label"/>
@@ -43,7 +42,6 @@
         </div>
     </div>
 
-    <div th:include="fragments/imports :: modal_create"/>
     <div th:include="fragments/table :: clickable"/>
 </section>
 
