--- a/archivist/src/main/resources/templates/export.html
+++ b/archivist/src/main/resources/templates/export.html
@@ -8,7 +8,6 @@
 <body>
 
 <section layout:fragment="content">
-    <div th:include="fragments/imports :: menu"/>
     <div class="wrapper">
         <table class="table table-striped table-hover">
             <tbody>
@@ -21,7 +20,7 @@
                 <td class="vert-align" th:text="${job.userCreated}"></td>
                 <td class="vert-align" th:text="${#dates.format(job.timeStarted, 'dd MMM yyyy HH:mm')}"></td>
                 <td class="col-md-4 vert-align">
-                    <div th:include="fragments/imports :: progress"/>
+                    <div th:include="fragments/job :: progress"/>
                 </td>
             </tr>
             </tbody>
@@ -37,11 +36,11 @@
                     <div class="panel-body">
                         <table class="table table-striped table-condensed no-margin">
                             <tbody>
-                            <tr><td>Total</td><td th:text="${imp.stats.assetTotal}"></td></tr>
-                            <tr><td>Created</td><td th:text="${imp.stats.assetCreated}"></td></tr>
-                            <tr><td>Updated</td><td th:text="${imp.stats.assetUpdated}"></td></tr>
-                            <tr><td>Errors</td><td th:text="${imp.stats.assetErrored}"></td></tr>
-                            <tr><td>Warnings</td><td th:text="${imp.stats.assetWarning}"></td></tr>
+                            <tr><td>Total</td><td th:text="${job.stats.assetTotal}"></td></tr>
+                            <tr><td>Created</td><td th:text="${job.stats.assetCreated}"></td></tr>
+                            <tr><td>Updated</td><td th:text="${job.stats.assetUpdated}"></td></tr>
+                            <tr><td>Errors</td><td th:text="${job.stats.assetErrored}"></td></tr>
+                            <tr><td>Warnings</td><td th:text="${job.stats.assetWarning}"></td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -80,8 +79,6 @@
             return false;
         });
     </script>
-
-    <div th:include="fragments/imports :: modal_create"/>
     <div th:include="fragments/table :: clickable"/>
 
 </section>
