--- a/archivist/src/main/resources/templates/login.html
+++ b/archivist/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
 
 <body>
   <div class="container">
-    <form id="f" class="form-signin" th:action="@{/gui/login}" method="post">
+    <form id="f" class="form-signin" th:action="@{/login}" method="post">
       <h2 class="form-signin-heading">Please sign in</h2>
       <label for="username" class="sr-only">Username</label>
       <input type="text" id="username" name="username" class="form-control" placeholder="Username" autofocus="true"/>
