--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -71,9 +71,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="/gui/assets"><i class="fa fa-file-image-o fa-fw"> Assets</i></a></li>
                         <li><a href="/gui/folders"><i class="fa fa-folder fa-fw"></i> Folders</a></li>
-                        <li><a href="/gui/imports"><i class="fa fa-upload fa-fw"> Import</i></a></li>
-                        <li><a href="/gui/ingests"><i class="fa fa-archive fa-fw"> Ingest</i></a></li>
-                        <li><a href="/gui/exports"><i class="fa fa-download fa-fw"> Export</i></a></li>
+                        <li><a href="/gui/imports"><i class="fa fa-upload fa-fw"> Imports</i></a></li>
+                        <li><a href="/gui/ingests"><i class="fa fa-archive fa-fw"> Ingests</i></a></li>
+                        <li><a href="/gui/exports"><i class="fa fa-download fa-fw"> Exports</i></a></li>
                     </ul>
                 </li>
             </ul>
