archivist: rather than try to overuse ZpsScript as both a task and a job object, introduced actual job and task objects.  This decouples the zpsscript from the job system and allows us to possibly send other types of scripts to execute.  It also is a lot cleaner.

--- a/archivist/src/main/resources/templates/fragments/tasks.html
+++ b/archivist/src/main/resources/templates/fragments/tasks.html
@@ -55,7 +55,7 @@ $(function(){
         <thead>
         <tr>
             <th>Id</th>
-            <th>Execute</th>
+            <th>Name</th>
             <th>State</th>
             <th>Duration</th>
             <th>Host</th>
@@ -64,7 +64,7 @@ $(function(){
         <tbody>
         <tr class="clickable-row" th:attr="data-id=${task.taskId}" data-toggle="modal" data-target="#viewModal" th:each="task: ${tasks}">
             <td class="vert-align" th:text="${task.taskId}"></td>
-            <td class="vert-align" th:text="${task.execute}"></td>
+            <td class="vert-align" th:text="${task.name}"></td>
             <td class="vert-align">
                 <div th:include="fragments/tasks :: state_label"/>
             </td>
