--- a/archivist/src/main/resources/templates/import.html
+++ b/archivist/src/main/resources/templates/import.html
@@ -37,11 +37,11 @@
                     <div class="panel-body">
                         <table class="table table-striped table-condensed no-margin">
                             <tbody>
-                            <tr><td>Total</td><td th:text="${imp.stats.assetTotal}"></td></tr>
-                            <tr><td>Created</td><td th:text="${imp.stats.assetCreated}"></td></tr>
-                            <tr><td>Updated</td><td th:text="${imp.stats.assetUpdated}"></td></tr>
-                            <tr><td>Errors</td><td th:text="${imp.stats.assetErrored}"></td></tr>
-                            <tr><td>Warnings</td><td th:text="${imp.stats.assetWarning}"></td></tr>
+                            <tr><td>Total</td><td th:text="${job.stats.assetTotal}"></td></tr>
+                            <tr><td>Created</td><td th:text="${job.stats.assetCreated}"></td></tr>
+                            <tr><td>Updated</td><td th:text="${job.stats.assetUpdated}"></td></tr>
+                            <tr><td>Errors</td><td th:text="${job.stats.assetErrored}"></td></tr>
+                            <tr><td>Warnings</td><td th:text="${job.stats.assetWarning}"></td></tr>
                             </tbody>
                         </table>
                     </div>
