--- a/archivist/src/main/resources/templates/fragments/assets.html
+++ b/archivist/src/main/resources/templates/fragments/assets.html
@@ -38,7 +38,7 @@
         <tbody>
         <tr th:each="asset: ${assets}">
             <td class="vert-align">
-                <a th:href="@{/ofs/__${asset.proxies.largest.id}__}" class="pop">
+                <a th:href="@{/api/v1/ofs/__${asset.proxies.largest.id}__}" class="pop">
                     <img height="50" th:src="@{/api/v1/ofs/__${asset.proxies.smallest.id}__}"/></a>
             </td>
             <td class="vert-align" th:text="${asset.getAttr('source.filename')}"></td>
