--- a/archivist/src/main/resources/templates/fragments/assets.html
+++ b/archivist/src/main/resources/templates/fragments/assets.html
@@ -24,8 +24,39 @@
     </nav>
 </div>
 
+<div th:fragment="view_modal">
+    <div class="modal modal-wide fade" id="viewModal" tabindex="-1" role="dialog" aria-labelledby="viewModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Attributes</h4>
+                </div>
+                <div class="modal-body">
+                    <pre id="log" data-dismiss="modal"></pre>
+                </div>
+            </div>
+        </div>
+        <script th:inline="javascript" type="text/javascript">
+            $(document).ready(function() {
+                $('#viewModal').on('show.bs.modal', function(e) {
+                    //get data-id attribute of the clicked element
+                    var assetId = $(e.relatedTarget).data('id');
+                    $.ajax({
+                        url : "/api/v1/assets/" + assetId,
+                        dataType: "json",
+                        success : function (data) {
+                            $("#log").text(JSON.stringify(data, null, 2));
+                        }
+                    });
+                });
+            });
+        </script>
+    </div>
+</div>
+
 <div th:fragment="table">
-    <table class="table table-striped table-hover">
+    <table id="table" class="table table-striped table-hover">
         <thead>
         <tr>
             <th></th>
@@ -36,12 +67,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="asset: ${assets}">
+        <tr class="clickable-row" th:each="asset: ${assets}">
             <td class="vert-align">
-                <a th:href="@{/api/v1/ofs/__${asset.proxies.largest.id}__}" class="pop">
+                <a th:if="${asset.proxies != null}" th:attr="data-id=${asset.id}" data-toggle="modal" data-target="#imagemodal">
                     <img height="50" th:src="@{/api/v1/ofs/__${asset.proxies.smallest.id}__}"/></a>
             </td>
-            <td class="vert-align" th:text="${asset.getAttr('source.filename')}"></td>
+            <td class="vert-align" th:attr="data-id=${asset.id}" data-toggle="modal" data-target="#viewModal" th:text="${asset.getAttr('source.filename')}"></td>
             <td class="vert-align" th:text="${#strings.substring(asset.getAttr('source.date'), 0, 10)}"></td>
             <td class="vert-align" th:text="${asset.getAttr('source.mediaType')}"></td>
             <td class="vert-align"
@@ -72,21 +103,30 @@
                             </div>
                         </div>
                     </nav>
-                    <a href="#" data-dismiss="modal"><img src="" width="75%" id="imagepreview" class="img-responsive center-block"/></a>
+                    <a id="image" href="#" data-dismiss="modal"></a>
                 </div>
             </div>
         </div>
     </div>
+    <div th:include="fragments/assets :: view_modal"/>
+    <div th:include="fragments/table :: clickable_view_modal"/>
 
     <script th:inline="javascript" type="text/javascript">
-        $(".pop").on("click", function(e) {
-            $('#imagepreview').attr('src', $(this).attr("href"));
-            $('#imagemodal').modal('show');
-            e.preventDefault();
+        $(document).ready(function() {
+            $('#imagemodal').on('show.bs.modal', function(e) {
+                var assetId = $(e.relatedTarget).data('id');
+                var img = $("<img />").attr('class', "center-block").height($(window).height()-50).attr('src', "/api/v1/assets/" + assetId + "/_stream")
+                .on('load', function() {
+                    if (!this.complete || typeof this.naturalWidth == "undefined" || this.naturalWidth == 0) {
+                        alert('broken image!');
+                    } else {
 
+                        $("#image").empty().append(img);
+                    }
+                });
+            });
         });
     </script>
-
 </div>
 
 </body>
