Changed EventLogService to just LogService.  This system is for logging user actions.  All the logs go into elasticsearch.

--- a/archivist/src/main/resources/templates/fragments/users.html
+++ b/archivist/src/main/resources/templates/fragments/users.html
@@ -28,6 +28,12 @@
     </nav>
 </div>
 
+<div th:fragment="user_label(user)">
+    <th:block th:if="${user}">
+        <i class="fa fa-user fa-fw" th:text="${'&nbsp;' + user.get('username')}"/>
+    </th:block>
+</div>
+
 <div th:fragment="side_menu">
     <div class="navbar navbar-default navbar-fixed-left">
         <nav class="nav-sidebar">
