--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -62,6 +62,7 @@
                         <li><a href="/gui/permissions"><i class="fa fa-lock fa-fw"/> Permissions</a></li>
                         <li><a href="/gui/filters"><i class="fa fa-filter fa-fw"/> Filters</a></li>
                         <li><a href="/gui/plugins"><i class="fa fa-plug fa-fw"/> Plugins</a></li>
+                        <li><a href="/gui/logs"><i class="fa fa-history fa-fw"/> Logs</a></li>
                     </ul>
                 </li>
             </ul>
@@ -74,6 +75,7 @@
                         <li><a href="/gui/imports"><i class="fa fa-upload fa-fw"> Imports</i></a></li>
                         <li><a href="/gui/ingests"><i class="fa fa-archive fa-fw"> Ingests</i></a></li>
                         <li><a href="/gui/exports"><i class="fa fa-download fa-fw"> Exports</i></a></li>
+                        <li><a href="/gui/pipelines"><i class="fa fa-cogs fa-fw"> Pipelines</i></a></li>
                     </ul>
                 </li>
             </ul>
