--- a/archivist/src/main/resources/public/css/admin.css
+++ b/archivist/src/main/resources/public/css/admin.css
@@ -501,3 +501,10 @@
     height: 28px;
     padding: 4px 10px;
 }
+
+.center-cropped {
+    object-fit: cover;
+    object-position: center;
+    height: 48px;
+    width: 48px;
+}
