--- a/archivist/src/main/resources/templates/fragments/table.html
+++ b/archivist/src/main/resources/templates/fragments/table.html
@@ -4,11 +4,19 @@
 <head></head>
 <body>
 <div th:fragment="pager">
-<ul class="pagination pull-right" style="margin: 0;">
+<ul class="pagination pull-right" style="margin-top: 10px; margin-right: 10px;">
     <li data-toggle="tooltip" data-placement="top" th:title="${'Total:' + page.totalCount}" class="previous"><a th:href="@{__${#httpServletRequest.requestURI}__(page=1)}"><span aria-hidden="true" th:text="${page.display}"></span></a></li>
-    <li><a th:href="@{__${#httpServletRequest.requestURI}__(page=${page.prev})}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a></li>
-    <li><a th:href="@{__${#httpServletRequest.requestURI}__(page=${page.next})}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+    <li><a th:href="@{__${#httpServletRequest.requestURI}__(query=${query},page=${page.prev})}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a></li>
+    <li><a th:href="@{__${#httpServletRequest.requestURI}__(query=${query},page=${page.next})}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
 </ul>
+</div>
+
+<div th:fragment="pager-no-margin">
+    <ul class="pagination pull-right">
+        <li data-toggle="tooltip" data-placement="top" th:title="${'Total:' + page.totalCount}" class="previous"><a th:href="@{__${#httpServletRequest.requestURI}__(page=1)}"><span aria-hidden="true" th:text="${page.display}"></span></a></li>
+        <li><a th:href="@{__${#httpServletRequest.requestURI}__(query=${query},page=${page.prev})}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a></li>
+        <li><a th:href="@{__${#httpServletRequest.requestURI}__(query=${query},page=${page.next})}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+    </ul>
 </div>
 
 <div th:fragment="clickable">
