--- a/archivist/src/main/resources/templates/pipelines.html
+++ b/archivist/src/main/resources/templates/pipelines.html
@@ -8,36 +8,22 @@
 
 <section layout:fragment="content">
 
-    <div class="container-fluid">
-    <div th:each="pipeline: ${pipelines}">
-        <div class="panel panel-default">
-            <div class="panel-heading" th:text="${pipeline.name}"></div>
-            <div class="panel-body">
-                <dl class="dl-horizontal">
-                    <dt>Description:</dt>
-                    <dd th:text="${pipeline.description}"></dd>
-                    <dt>Type</dt>
-                    <dd th:text="${pipeline.type}"></dd>
-                </dl>
-            </div>
-            <table class="table table-striped">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Class</th>
-                        <th>Args</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="proc: ${pipeline.processors}">
-                        <td th:text="${proc.className}"></td>
-                        <td th:text="${proc.args}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </table>
-        </div>
-    </div>
+    <div th:include="fragments/pipelines :: menu"/>
+    <div class="wrapper">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="pipeline: ${pipelines}" >
+                <td><a th:text="${pipeline.name}" th:href="@{/gui/pipelines/__${pipeline.id}__}"></a></td>
+                <td th:text="${pipeline.description}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </section>
 
